--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/stylesheets/bootstrap.css"/>
         <link rel="stylesheet" href="/stylesheets/flat-ui.css"/>
         <link rel="stylesheet" href="/stylesheets/page.css"/>
+        <link rel="stylesheet" href="/stylesheets/xs_page.css"/>
   		<script type="text/javascript" src="/javascripts/jquery.js"></script>
         <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
     </head>
