--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,7 +7,7 @@
     </div>
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#fakelink">首页</a></li>
+            <li><a href="/">首页</a></li>
             <li><a href="#fakelink">话题</a></li>
         </ul>
         <form class="navbar-form navbar-left" action="#" role="search">
