添加搜索模块，提供探索和发现接口，用神奇的方法解决无限点赞和踩的问题

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,10 +10,10 @@
             <li><a href="/">首页</a></li>
             <li><a href="#fakelink">话题</a></li>
         </ul>
-        <form class="navbar-form navbar-left" action="#" role="search">
+        <form class="navbar-form navbar-left" action="/search" method="post" role="search">
             <div class="form-group">
                 <div class="input-group">
-                    <input class="form-control" type="search" placeholder="Search">
+                    <input class="form-control" type="search" placeholder="Search" name="keyword">
                       <span class="input-group-btn">
                         <button type="submit" class="btn"><span class="fui-search"></span></button>
                       </span>
