--- a/views/question.ejs
+++ b/views/question.ejs
@@ -55,33 +55,7 @@
 <% include footer.ejs %>
 
 <script>
-	$(function(){
-		$(".upBtn").on("click", function(){
-			var num = $(this).attr("num");
-			var that = $(this);
-			$.post("/vote", {
-				value: 1,
-				id: $(this).attr("myId"),
-				num: $(this).attr("num")
-			}, function(data){
-				that[0].innerHTML = '<small><span class="fui-heart"></span>'
-							   	  + data.question.answer[num].up;
-							      + '</small>';
-			});
-		});
-		$(".downBtn").on("click", function(){
-			var num = $(this).attr("num");
-			var that = $(this);
-			$.post("/vote", {
-				value: -1,
-				id: $(this).attr("myId"),
-				num: $(this).attr("num")
-			}, function(data){
-				//that.attr("value", "down(" + data.question.answer[num].down + ")");
-				that[0].innerHTML = '<small><span class="fui-cross"></span>'
-							      + data.question.answer[num].down
-							      + '</small>';
-			});
-		});
-	});
+    seajs.use('question',function(question){
+        question.init();
+    });
 </script>
