--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="/stylesheets/flat-ui.css"/>
         <link rel="stylesheet" href="/stylesheets/page.css"/>
         <link rel="stylesheet" href="/stylesheets/xs_page.css"/>
-  		<script type="text/javascript" src="/javascripts/jquery.js"></script>
+  		  <script type="text/javascript" src="/javascripts/jquery.js"></script>
+        <script type="text/javascript" src="/javascripts/jquery-cookie.js"></script>
         <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
     </head>
   	<body>
