--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="daye">
 	<head>
     	<title><%= title %></title>
         <link rel="stylesheet" href="/stylesheets/bootstrap.css"/>
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/stylesheets/xs_page.css"/>
   		<script type="text/javascript" src="/javascripts/jquery.js"></script>
         <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/javascripts/lib/angular.min.js"></script>
     </head>
   	<body>
   		<%- body %>
