--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
             <li><a href="/">首页</a></li>
-            <li><a href="#fakelink">话题</a></li>
+            <li><a href="/topic">话题</a></li>
         </ul>
         <form class="navbar-form navbar-left" action="/search" method="post" role="search">
             <div class="form-group">
