--- a/views/index-1.ejs
+++ b/views/index-1.ejs
@@ -7,8 +7,8 @@
             <div class="btn-group">
                 <a class="btn btn-info active" ng-click="changeState('person')"><span class="fui-user"></span><span>我关注的人的动态</span></a>
                 <a class="btn btn-inverse" ng-click="changeState('topic')"><span class="fui-chat"></span><span>我关注的话题</span></a>
-                <a class="btn btn-primary" ng-click="changeState('person')"><span class="fui-heart"></span><span>我的收藏夹</span></a>
-                <a class="btn btn-warning" ng-click="changeState('person')"><span class="fui-eye"></span><span>探索和发现</span></a>
+                <a class="btn btn-primary" ng-click="changeState('collection')"><span class="fui-heart"></span><span>我的收藏夹</span></a>
+                <a class="btn btn-warning" ng-click="changeState('hot')"><span class="fui-eye"></span><span>探索和发现</span></a>
             </div>
         </div> <!-- /toolbar -->
 
@@ -20,7 +20,7 @@
 
                 <li class="pbm q-content-list" ng-repeat="record in records">
                     <a href="/question/{{record._id}}">
-                        <h5>{{record.title}}<small class="mlm">{{record.user}}</small></h5>
+                        <h5>{{record.title}}<small class="mlm"><a href="/user/{{record.user}}">{{record.user}}</a></small></h5>
                     </a>
                     <p>{{ record.content }}</p>
                     <small class="subtitle">{{record.answer.length}}条评论</small>
