--- a/views/search.ejs
+++ b/views/search.ejs
@@ -5,10 +5,10 @@
 
         <div class="btn-toolbar">
             <div class="btn-group">
-                <a class="btn btn-info active" href="#fakelink"><span class="fui-user"></span><span>我关注的人的动态</span></a>
-                <a class="btn btn-inverse" href="#fakelink"><span class="fui-chat"></span><span>我关注的话题</span></a>
-                <a class="btn btn-primary" href="#fakelink"><span class="fui-heart"></span><span>我的收藏夹</span></a>
-                <a class="btn btn-warning" href="#fakelink"><span class="fui-eye"></span><span>探索和发现</span></a>
+                <a class="btn btn-info active" href="/"><span class="fui-user"></span><span>我关注的人的动态</span></a>
+                <a class="btn btn-inverse" href="/"><span class="fui-chat"></span><span>我关注的话题</span></a>
+                <a class="btn btn-primary" href="/"><span class="fui-heart"></span><span>我的收藏夹</span></a>
+                <a class="btn btn-warning" href="/"><span class="fui-eye"></span><span>探索和发现</span></a>
             </div>
         </div> <!-- /toolbar -->
 
